--- a/lib/generators/blazer/templates/config.yml
+++ b/lib/generators/blazer/templates/config.yml
@@ -6,3 +6,7 @@ smart_columns:
 
 smart_variables:
   # zone_id: "SELECT id, name FROM zones ORDER BY name ASC"
+  #=== You can use it as Array
+  # zone_name: ['Zone 1', 'Zone 2']
+  #=== or as Hash
+  # zone_type: [type_1: 'Type 1', type_2: 'Type 2']
