--- a/lib/generators/blazer/templates/config.yml
+++ b/lib/generators/blazer/templates/config.yml
@@ -4,7 +4,7 @@ data_sources:
   main:
     url: <%%= ENV["BLAZER_DATABASE_URL"] %>
 
-    timeout: 15
+    timeout: 15 # applies to PostgreSQL only
 
     smart_variables:
       # zone_id: "SELECT id, name FROM zones ORDER BY name ASC"
