adds auth_filter config directive to provide an optional before_action for blazer controllers

--- a/lib/generators/blazer/templates/config.yml
+++ b/lib/generators/blazer/templates/config.yml
@@ -40,5 +40,8 @@ audit: true
 # method name for the user model
 # user_name: name
 
+# optional auth method to use as a before_action (default: nil)
+# auth_filter: :authenticate!
+
 # email to send checks from
 # from_email: blazer@example.org
