cleanup and support hashes too

--- a/lib/generators/blazer/templates/config.yml
+++ b/lib/generators/blazer/templates/config.yml
@@ -29,6 +29,8 @@ data_sources:
 
     smart_columns:
       # user_id: "SELECT id, name FROM users WHERE id IN {value}"
+      # gender: {M: Male, F: Female}
+      # day_of_week: ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"]
 
 # create audits
 audit: true
