Support smart_variables as a Hash or Array (#20)

--- a/lib/generators/blazer/templates/config.yml
+++ b/lib/generators/blazer/templates/config.yml
@@ -23,6 +23,10 @@ data_sources:
 
     smart_variables:
       # zone_id: "SELECT id, name FROM zones ORDER BY name ASC"
+      #=== You can use it as Array
+      # zone_name: ['Zone 1', 'Zone 2']
+      #=== or as Hash
+      # zone_type: {type_1: 'Type 1', type_2: 'Type 2'}
 
     linked_columns:
       # user_id: "/admin/users/{value}"
