--- a/lib/generators/blazer/templates/config.yml
+++ b/lib/generators/blazer/templates/config.yml
@@ -23,10 +23,8 @@ data_sources:
 
     smart_variables:
       # zone_id: "SELECT id, name FROM zones ORDER BY name ASC"
-      #=== You can use it as Array
-      # zone_name: ['Zone 1', 'Zone 2']
-      #=== or as Hash
-      # zone_type: {type_1: 'Type 1', type_2: 'Type 2'}
+      # period: ["day", "week", "month"]
+      # status: {0: "Active", 1: "Archived"}
 
     linked_columns:
       # user_id: "/admin/users/{value}"
