Fixes documentation and template for `user_method` and `user_name`

--- a/lib/generators/blazer/templates/config.yml
+++ b/lib/generators/blazer/templates/config.yml
@@ -41,7 +41,10 @@ audit: true
 # class name of the user model
 # user_class: User
 
-# method name for the user model
+# method name for the current user
+# user_method: current_user
+
+# method name for the display name
 # user_name: name
 
 # optional auth method to use as a before_action (default: nil)
