--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 *.o
 *.a
 mkmf.log
+log/*.log
+test/dummy/db/*.sqlite3
+test/dummy/db/*.sqlite3-journal
+test/dummy/log/*.log
+test/dummy/tmp/
+test/dummy/.sass-cache
