Make config consistent with docs (and use string instead of symbol - both work)

--- a/lib/generators/blazer/templates/config.yml
+++ b/lib/generators/blazer/templates/config.yml
@@ -48,7 +48,7 @@ audit: true
 # user_name: name
 
 # optional auth method to use as a before_action (default: nil)
-# before_action: :authenticate!
+# before_action: require_admin
 
 # email to send checks from
 # from_email: blazer@example.org
