Added uploads test

--- a/test/internal/config/blazer.yml
+++ b/test/internal/config/blazer.yml
@@ -73,7 +73,7 @@ check_schedules:
 mapbox_access_token: token
 
 # enable uploads
-# uploads:
-#   url:
-#   schema: uploads
-#   data_source: main
+uploads:
+  url: postgres://localhost/blazer_test
+  schema: uploads
+  data_source: main
