--- a/test/internal/config/blazer.yml
+++ b/test/internal/config/blazer.yml
@@ -67,7 +67,7 @@ check_schedules:
 
 # enable forecasting
 # note: with trend, time series are sent to https://trendapi.org
-# forecasting: prophet / trend
+forecasting: prophet
 
 # enable map
 mapbox_access_token: token
