--- a/test/internal/config/blazer.yml
+++ b/test/internal/config/blazer.yml
@@ -67,7 +67,7 @@ check_schedules:
 
 # enable anomaly detection
 # note: with trend, time series are sent to https://trendapi.org
-# anomaly_checks: prophet / trend / r
+anomaly_checks: prophet
 
 # enable forecasting
 # note: with trend, time series are sent to https://trendapi.org
