enabled adapter tests + disable broken elasticsearch tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,7 @@ jobs:
     - uses: ankane/setup-postgres@v1
       with:
         database: blazer_test
+    - uses: ankane/setup-mysql@v1
+      with:
+        database: blazer_test
     - run: bundle exec rake test
