Improved Ignite test [skip ci]

--- a/test/internal/config/blazer.yml
+++ b/test/internal/config/blazer.yml
@@ -61,6 +61,9 @@ data_sources:
     adapter: hive
     url: sasl://localhost:10000/blazer_test
 
+  ignite:
+    url: ignite://localhost:10800
+
   influxdb:
     adapter: influxdb
     url: http://localhost:8086/blazer_test
