Check Mapbox access token is public [skip ci]

--- a/test/internal/config/blazer.yml
+++ b/test/internal/config/blazer.yml
@@ -154,7 +154,7 @@ check_schedules:
 # forecasting: prophet / trend
 
 # enable map
-mapbox_access_token: token
+mapbox_access_token: pk.token
 
 # enable uploads
 uploads:
