--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
             gemfile: Gemfile
           - ruby: "3.0"
             gemfile: gemfiles/rails61.gemfile
-          - ruby: 2.7
+          - ruby: "3.0"
             gemfile: gemfiles/rails60.gemfile
     env:
       BUNDLE_GEMFILE: ${{ matrix.gemfile }}
