Replace api key with token per query

--- a/test/internal/config/blazer.yml
+++ b/test/internal/config/blazer.yml
@@ -161,3 +161,7 @@ uploads:
   url: postgres://localhost/blazer_test
   schema: uploads
   data_source: main
+
+sharing:
+  path: /blazer_share
+  enabled: true
