--- a/test/internal/config/database.yml
+++ b/test/internal/config/database.yml
@@ -1,3 +1,8 @@
 test:
-  adapter:  postgresql
-  database: blazer_test
+  primary:
+    adapter:  postgresql
+    database: blazer_test
+  primary_replica:
+    adapter:  postgresql
+    database: blazer_test
+    replica: true
