Fixed bind params for SQLite

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,4 @@ jobs:
           database: blazer_test
       - run: bundle exec rake test
       - run: bundle exec rake test:postgresql
+      - run: bundle exec rake test:sqlite
