--- a/test/support/adapters.yml
+++ b/test/support/adapters.yml
@@ -50,7 +50,7 @@ data_sources:
     url: postgres://localhost/blazer_test
 
   presto:
-    url: presto://user@localhost:8080/jmx
+    url: trino://user@localhost:8080/jmx
 
   redshift:
     url: redshift://localhost:5439/blazer_test
