Test anomaly detection and forecasting on CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      TEST_PROPHET: 1
     strategy:
       fail-fast: false
       matrix:
